--- a/lib/sass/_button.scss
+++ b/lib/sass/_button.scss
@@ -1,10 +1,5 @@
 .button {
-    background: #ffffff;
-    background-image: -webkit-linear-gradient(top, #ffffff, #F2F2F2);
-    background-image: -moz-linear-gradient(top, #ffffff, #F2F2F2);
-    background-image: -ms-linear-gradient(top, #ffffff, #F2F2F2);
-    background-image: -o-linear-gradient(top, #ffffff, #F2F2F2);
-    background-image: linear-gradient(to bottom, #ffffff, #F2F2F2);
+    @include background-image(linear-gradient(#ffffff, #F2F2F2));
     font-family: Arial;
     font-weight: bold;
     color: #005AAB;
@@ -15,12 +10,7 @@
     text-decoration: none;
     cursor: pointer;
     &:hover {
-        background: #F2F2F2;
-        background-image: -webkit-linear-gradient(top, #F2F2F2, #ffffff);
-        background-image: -moz-linear-gradient(top, #F2F2F2, #ffffff);
-        background-image: -ms-linear-gradient(top, #F2F2F2, #ffffff);
-        background-image: -o-linear-gradient(top, #F2F2F2, #ffffff);
-        background-image: linear-gradient(to bottom, #F2F2F2, #ffffff);
+        @include background-image(linear-gradient(#F2F2F2, #ffffff));
         text-decoration: none;
     }
     &:active {
