--- a/lib/sass/_button.scss
+++ b/lib/sass/_button.scss
@@ -1,3 +1,5 @@
+@import "./variables.scss";
+
 .button {
     @include background-image(linear-gradient(#ffffff, #F2F2F2));
     font-family: Arial;
@@ -12,6 +14,13 @@
     &:hover {
         @include background-image(linear-gradient(#F2F2F2, #ffffff));
         text-decoration: none;
+    }
+    &:disabled {
+        color: $deactivated;
+        cursor: default;
+        &:hover {
+            @include background-image(linear-gradient(#ffffff, #F2F2F2));
+        }
     }
     &:active {
         background: #F2F2F2;
