--- a/lib/sass/_button.scss
+++ b/lib/sass/_button.scss
@@ -1,7 +1,7 @@
 @import "./variables.scss";
 
 .button {
-    @include background-image(linear-gradient(#ffffff, #F2F2F2));
+    @include background(linear-gradient(#ffffff, #F2F2F2));
     font-family: Arial;
     font-weight: bold;
     color: #005AAB;
@@ -12,14 +12,14 @@
     text-decoration: none;
     cursor: pointer;
     &:hover {
-        @include background-image(linear-gradient(#F2F2F2, #ffffff));
+        @include background(linear-gradient(#F2F2F2, #ffffff));
         text-decoration: none;
     }
     &:disabled {
         color: $deactivated;
         cursor: default;
         &:hover {
-            @include background-image(linear-gradient(#ffffff, #F2F2F2));
+            @include background(linear-gradient(#ffffff, #F2F2F2));
         }
     }
     &:active {
