add actions and reducer for login refactor submit and search button into FetchButton component

--- a/lib/sass/_FetchButton.scss
+++ b/lib/sass/_FetchButton.scss
@@ -1,12 +1,10 @@
+@import "./_button.scss";
 
-@import "./variables.scss";
-@import "./button.scss";
-
-.search {
-    .search_button {
+.fetch-button {
+    button {
         @extend .button;
-        font-size: 18px;
         font-weight: normal;
+        font-size: 18px;
     }
     .error {
         margin: 0;
