--- a/lib/sass/style.scss
+++ b/lib/sass/style.scss
@@ -1,6 +1,5 @@
 @import "compass";
-@import "./button.scss";
-@import "./input.scss";
-@import "./ResultList.scss";
-@import "./Result.scss";
-@import "./_Search.scss";
+@import "./_FetchButton.scss";
+@import "./_input.scss";
+@import "./_ResultList.scss";
+@import "./_Result.scss";
