style notice button

--- a/lib/sass/_ViewNotice.scss
+++ b/lib/sass/_ViewNotice.scss
@@ -1,3 +1,11 @@
+.view_notice {
+    .fetch-button {
+        button {
+            @extend .button;
+        }
+    }
+}
+
 .ReactModal__Content {
     .notice {
         dt {
