add fullText limiter

--- a/lib/sass/style.scss
+++ b/lib/sass/style.scss
@@ -1,4 +1,7 @@
 @import "compass";
+@import "../../node_modules/rc-checkbox/assets/index.css";
+@import "../../node_modules/rc-slider/assets/index.css";
+@import "../../node_modules/rc-calendar/assets/index.css";
 @import "./_FetchButton.scss";
 @import "./_input.scss";
 @import "./_ResultList.scss";
