--- a/lib/sass/_button.scss
+++ b/lib/sass/_button.scss
@@ -10,6 +10,7 @@
     padding: 5px 10px 5px 10px;
     border: solid #BBBBBB 1px;
     text-decoration: none;
+    border-radius: 4px;
     cursor: pointer;
     &:hover {
         @include background(linear-gradient(#F2F2F2, #ffffff));
