--- a/lib/sass/_input.scss
+++ b/lib/sass/_input.scss
@@ -1,3 +1,5 @@
+@import "./_variables.scss";
+
 .input {
     display: inline-block;
     margin: 0;
@@ -6,8 +8,10 @@
     font-family: sans-serif;
     appearance: none;
     box-shadow: none;
-    border-radius: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
     &:focus {
         outline: none;
+    border: 1px solid $hover;
     }
 }
