dont trigger search when limiter did not change

--- a/lib/sass/style.scss
+++ b/lib/sass/style.scss
@@ -2,6 +2,7 @@
 @import "../../node_modules/rc-checkbox/assets/index.css";
 @import "../../node_modules/rc-slider/assets/index.css";
 @import "../../node_modules/react-input-calendar/styles/input-calendar.css";
+@import "./_Search.scss";
 @import "./_FetchButton.scss";
 @import "./_input.scss";
 @import "./_ResultList.scss";
