--- a/lib/sass/_input.scss
+++ b/lib/sass/_input.scss
@@ -1,9 +1,10 @@
 @import "./_variables.scss";
 
-.input {
+input[type=text],
+input[type=password] {
     display: inline-block;
     margin: 0;
-    font-size: 18px;
+    font-size: 11px;
     padding: 5px 10px 5px 10px;
     font-family: sans-serif;
     appearance: none;
