make sure modal is on front of all

--- a/lib/sass/_App.scss
+++ b/lib/sass/_App.scss
@@ -3,6 +3,10 @@
     padding: 20px;
 }
 
+.ReactModal__Overlay {
+    z-index: 999999;
+}
+
 .hidden-sidebar {
     z-index: 3;
     position: absolute;
