--- a/lib/sass/_Limiters.scss
+++ b/lib/sass/_Limiters.scss
@@ -5,9 +5,27 @@
         margin-left: 25px;
         padding: 10px;
         width: 250px;
-        h5 {
-            margin-top: 0px;
-            margin-bottom: 10px;
+        input {
+            width: 220px;
+        }
+        .reset {
+            cursor: pointer;
+            button {
+                padding: 2px;
+            }
+        }
+        .more-limit-toggle {
+            cursor: pointer;
+        }
+        .more-limit {
+            @include single-transition(max-height, 0.2s, ease-in, 0s)
+            overflow: hidden;
+            &.shown {
+                max-height: 2000px;
+            }
+            &.hidden {
+                max-height: 0px;
+            }
         }
         .publication-date-limiter {
             .input-calendar {
