add loader component

--- a/lib/sass/_Limiters.scss
+++ b/lib/sass/_Limiters.scss
@@ -1,6 +1,8 @@
 @import "./_variables.scss";
 
 .sidebar {
+    width: 300px;
+    overflow: hidden;
     .limiters {
         margin-left: 25px;
         padding: 10px;
