--- a/lib/sass/_Limiters.scss
+++ b/lib/sass/_Limiters.scss
@@ -1,6 +1,7 @@
 @import "./_variables.scss";
 
 .sidebar {
+    font-size: 100%;
     width: 300px;
     overflow: hidden;
     .limiters {
@@ -55,7 +56,7 @@
                     color: $hover;
                 }
                 .input-calendar-value {
-                    width: 60px;
+                    width: 75px;
                     &:focus {
                         border: 1px solid $hover;
                     }
