--- a/lib/sass/_FetchButton.scss
+++ b/lib/sass/_FetchButton.scss
@@ -4,7 +4,7 @@
     button {
         @extend .button;
         font-weight: normal;
-        font-size: 18px;
+        font-size: 1em;
     }
     .error {
         margin: 0;
