--- a/lib/sass/_Limiters.scss
+++ b/lib/sass/_Limiters.scss
@@ -1,15 +1,15 @@
 @import "./_variables.scss";
 
 .sidebar {
-    font-size: 100%;
+    font-size: 16px;
     width: 300px;
     overflow: hidden;
     .limiters {
         h4 {
-            font-size: 22px;
+            font-size: 1.3em;
         }
         h5 {
-            font-size: 16px;
+            font-size: 1.1em;
         }
         margin-left: 25px;
         padding: 10px;
@@ -20,6 +20,7 @@
         .reset {
             cursor: pointer;
             float: right;
+            font-size: 16px;
             button {
                 padding: 2px;
             }
