--- a/lib/sass/_input.scss
+++ b/lib/sass/_input.scss
@@ -4,7 +4,7 @@ input[type=text],
 input[type=password] {
     display: inline-block;
     margin: 0;
-    font-size: 18px;
+    font-size: 1em;
     padding: 5px 10px 5px 10px;
     font-family: sans-serif;
     appearance: none;
