add profile to authentication component

--- a/lib/sass/_button.scss
+++ b/lib/sass/_button.scss
@@ -1,6 +1,6 @@
 @import "./_variables.scss";
 
-.button {
+.button, select {
     display: inline-block;
     @include background(linear-gradient(#ffffff, #F2F2F2));
     font-family: Arial;
@@ -26,5 +26,11 @@
     &:active {
         background: #F2F2F2;
         text-decoration: none;
+    }
+}
+
+select {
+    option:first {
+        color: #999;
     }
 }
