add first and last page button

--- a/lib/sass/_input.scss
+++ b/lib/sass/_input.scss
@@ -1,6 +1,7 @@
 @import "./_variables.scss";
 
 input[type=text],
+input[type=number],
 input[type=password] {
     display: inline-block;
     margin: 0;
