--- a/lib/sass/style.scss
+++ b/lib/sass/style.scss
@@ -6,8 +6,8 @@
 @import "./_Search.scss";
 @import "./_FetchButton.scss";
 @import "./_input.scss";
-@import "./_ResultList.scss";
-@import "./_Result.scss";
+@import "./_RecordList.scss";
+@import "./_Record.scss";
 @import "./_ViewNotice.scss";
 @import "./_Limiters.scss";
 @import "./_App.scss";
