add History component

--- a/lib/sass/style.scss
+++ b/lib/sass/style.scss
@@ -14,3 +14,5 @@
 @import "./_Home.scss";
 @import "./_ViewAbstract.scss";
 @import "./_Pagination.scss";
+@import "./_DL.scss";
+@import "./_History.scss";
