--- a/lib/sass/_History.scss
+++ b/lib/sass/_History.scss
@@ -1,20 +1,29 @@
 @import "./variables.scss";
 
 .history {
-    // border: solid 1px #dcdada;
-    border-spacing: 0;
-    tr {
-        &:nth-child(even) {
-            background-color: $back;
+    div {
+        &.shown {
+            display: block;
         }
-        margin: 0px;
-        padding: 0px;
-        border: 0;
-        outline: 0;
+        &.hidden {
+            display: none;
+        }
+        table {
+            border-spacing: 0;
+            tr {
+                &:nth-child(even) {
+                    background-color: $back;
+                }
+                margin: 0px;
+                padding: 0px;
+                border: 0;
+                outline: 0;
+            }
+            th, td {
+                vertical-align: top;
+                border: solid 1px #dcdada;
+            }
+            width: 100%;
+        }
     }
-    th, td {
-        vertical-align: top;
-        border: solid 1px #dcdada;
-    }
-    width: 100%;
 }
