--- a/lib/sass/style.scss
+++ b/lib/sass/style.scss
@@ -9,7 +9,7 @@
 @import "./_RecordList.scss";
 @import "./_Record.scss";
 @import "./_ViewNotice.scss";
-@import "./_Limiters.scss";
+@import "./_Sidebar.scss";
 @import "./_App.scss";
 @import "./_Home.scss";
 @import "./_ViewAbstract.scss";
