move viewnotice trigger on the title

--- a/lib/sass/_ViewNotice.scss
+++ b/lib/sass/_ViewNotice.scss
@@ -1,7 +1,8 @@
 .view_notice {
-    .fetch-button {
-        button {
-            @extend .button;
+    .fetch-link {
+        text-decoration: none;
+        &:hover{
+            text-decoration: underline;
         }
     }
 }
