--- a/lib/sass/_input.scss
+++ b/lib/sass/_input.scss
@@ -3,6 +3,7 @@
 input[type=text],
 input[type=number],
 input[type=password] {
+    background-color: white;
     display: inline-block;
     margin: 0;
     font-size: 1em;
