fix style for mozilla

--- a/lib/sass/_button.scss
+++ b/lib/sass/_button.scss
@@ -1,6 +1,6 @@
 @import "./_variables.scss";
 
-.button, select {
+.button {
     display: inline-block;
     @include background(linear-gradient(#ffffff, #F2F2F2));
     font-family: Arial;
