fix css (font and date size)

--- a/lib/sass/_App.scss
+++ b/lib/sass/_App.scss
@@ -1,7 +1,15 @@
+.ebsco-widget {
+    color: black;
+    font-family: sans-serif;
+    font-size: 14px;
+    // a {
+    //     margin: 0px;
+    // }
+}
+
 .main {
     margin-left: 25px;
     padding: 20px;
-    font-size: 16px;
 }
 
 .ReactModal__Overlay {
