--- a/lib/sass/_Record.scss
+++ b/lib/sass/_Record.scss
@@ -6,6 +6,14 @@
     .title {
         color: $title;
     }
+    .fetch-link {
+        cursor: pointer;
+        text-decoration: none;
+        &:hover{
+            text-decoration: underline;
+            cursor: pointer;
+        }
+    }
     margin: 20px;
     padding: 20px;
     padding-top: 5px;
