--- a/lib/sass/_Search.scss
+++ b/lib/sass/_Search.scss
@@ -1,5 +1,6 @@
 @import "./_variables.scss";
 .search {
+    display: inline-block;
     .input input {
         font-size: 1em;
         height: 23px;
