--- a/lib/sass/style.scss
+++ b/lib/sass/style.scss
@@ -18,3 +18,5 @@
 @import "./_Error.scss";
 @import "./_ArticleLink.scss";
 @import "./_AdvancedEds.scss";
+@import "./_Eds.scss";
+@import "./_SearchResultWithSidebar.scss"
