--- a/lib/sass/_Sidebar.scss
+++ b/lib/sass/_Sidebar.scss
@@ -78,9 +78,12 @@
                     min-width: 180px;
                 }
             }
-            .button {
+            .btn {
                 width: 40px;
             }
+        }
+        .form-group {
+            margin-bottom: 0px;
         }
     }
 }
