--- a/lib/sass/_App.scss
+++ b/lib/sass/_App.scss
@@ -2,13 +2,10 @@
     color: black;
     font-family: sans-serif;
     font-size: 14px;
-}
-
-.ReactModal__Overlay {
-    z-index: 999999;
-}
-
-.close_modal {
-    z-index: 999;
-    float: right;
+    .container {
+        max-width: 100%;
+    }
+    .eds, .advanced-eds {
+        padding: 25px;
+    }
 }
