--- a/lib/sass/style.scss
+++ b/lib/sass/style.scss
@@ -17,6 +17,6 @@
 @import "./_History.scss";
 @import "./_Error.scss";
 @import "./_ArticleLink.scss";
-@import "./_AdvancedEds.scss";
 @import "./_Eds.scss";
-@import "./_SearchResultWithSidebar.scss"
+@import "./_SearchResultWithSidebar.scss";
+@import "./_Tooltip.scss";
