better style for fullTextHolding

--- a/lib/sass/style.scss
+++ b/lib/sass/style.scss
@@ -6,8 +6,8 @@
 @import "../../node_modules/react-select/dist/react-select.min.css";
 @import "./_Search.scss";
 @import "./_input.scss";
-@import "./_ArticleList.scss";
-@import "./_Article.scss";
+@import "./_RecordList.scss";
+@import "./_Record.scss";
 @import "./_ViewNotice.scss";
 @import "./_Sidebar.scss";
 @import "./_App.scss";
