--- a/lib/sass/_Record.scss
+++ b/lib/sass/_Record.scss
@@ -1,7 +1,7 @@
 
 @import "./variables.scss";
 
-.article {
+.record {
     text-align: left;
     .title {
         color: $title;
@@ -13,6 +13,9 @@
             text-decoration: underline;
             cursor: pointer;
         }
+    }
+    .fulltext-holdings {
+        list-style-type: none;
     }
     margin: 20px;
     padding: 20px;
