--- a/lib/sass/_App.scss
+++ b/lib/sass/_App.scss
@@ -5,7 +5,7 @@
     .container {
         max-width: 100%;
     }
-    .eds, .full-screen {
+    .eds, .publication, .full-screen {
         padding: 25px;
     }
     .full-screen {
