--- a/lib/sass/_DL.scss
+++ b/lib/sass/_DL.scss
@@ -10,6 +10,10 @@
     dt::after {
         content: ":"
     }
+    .fulltext-holdings {
+        list-style-type: none;
+        padding: 0;
+    }
     dd {
         display: block;
     }
