better style for ArticleSearchInputList

--- a/lib/sass/_Search.scss
+++ b/lib/sass/_Search.scss
@@ -15,4 +15,9 @@
     .button {
         height: 36px;
     }
+    .article-search-input-list {
+        button {
+            margin: 0 5px 0 5px;
+        }
+    }
 }
