--- a/lib/sass/_Search.scss
+++ b/lib/sass/_Search.scss
@@ -16,8 +16,13 @@
         height: 36px;
     }
     .article-search-input-list {
-        button {
-            margin: 0 5px 0 5px;
+        .open.dropdown.btn-group {
+            z-index: 3;
+        }
+        .action {
+            button {
+                margin: 0 5px 0 5px;
+            }
         }
     }
 }
