fix retrieve pdf and modal

--- a/lib/sass/_App.scss
+++ b/lib/sass/_App.scss
@@ -9,6 +9,7 @@
         padding: 25px;
     }
     .full-screen {
+        z-index: 1;
         position: fixed;
         top: 0px;
         bottom: 0px;
@@ -16,5 +17,17 @@
         right: 0px;
         background-color: white;
         overflow: auto;
+    }
+}
+
+.ReactModalPortal:nth-last-child(1) {
+    .ReactModal__Overlay {
+        z-index: 3;
+    }
+}
+
+.ReactModalPortal:nth-last-child(2) {
+    .ReactModal__Overlay {
+        z-index: 4;
     }
 }
