--- a/lib/sass/_DL.scss
+++ b/lib/sass/_DL.scss
@@ -17,4 +17,20 @@
     dd {
         display: block;
     }
+    .dl {
+        display: inline-block;
+        margin-top: 1em;
+        dt {
+            text-align: left;
+            padding: 0;
+        }
+        dd {
+            padding: 0;
+        }
+    }
+}
+
+.ul {
+    list-style-type: none;
+    padding-left: 0;
 }
