change label for publicationDateLimiter

--- a/lib/sass/_Sidebar.scss
+++ b/lib/sass/_Sidebar.scss
@@ -47,7 +47,11 @@
             .boundaries {
                 display: flex;
                 align-items: center;
-                justify-content: center;
+                justify-content: flex;
+                align-content: stretch;
+                .to {
+                    text-align: center;
+                }
                 .title {
                     text-align: center;
                 }
