--- a/lib/sass/_SearchResultWithSidebar.scss
+++ b/lib/sass/_SearchResultWithSidebar.scss
@@ -3,7 +3,7 @@
 
     border-top: solid 1px #ccc;
     .sidebar-handler {
-        float: left;
+        position: absolute;
     }
     .sidebar {
         width: 300px;
