--- a/lib/sass/_Sidebar.scss
+++ b/lib/sass/_Sidebar.scss
@@ -28,7 +28,7 @@
             .boundaries {
                 display: flex;
                 align-items: center;
-                justify-content: flex;
+                justify-content: center;
                 align-content: stretch;
                 .to {
                     text-align: center;
