--- a/lib/sass/_Sidebar.scss
+++ b/lib/sass/_Sidebar.scss
@@ -61,6 +61,7 @@
                 }
                 .more {
                     width: 15%;
+                    font-size: 20px;
                 }
             }
         }
