--- a/lib/sass/_Sidebar.scss
+++ b/lib/sass/_Sidebar.scss
@@ -61,7 +61,7 @@
                 }
                 .more {
                     width: 15%;
-                    font-size: 20px;
+                    font-size: 1.4rem;
                 }
             }
         }
