--- a/lib/sass/_Record.scss
+++ b/lib/sass/_Record.scss
@@ -17,6 +17,18 @@
     .fulltext-holdings {
         list-style-type: none;
     }
+    .notice {
+        dt {
+            display: block;
+            width: 200px;
+            font-weight: bold;
+            padding: 5px 10px 5px 10px
+        }
+        dd {
+            margin: 0 0 0 200px;
+            padding: 5px 0 5px 10px;
+        }
+    }
     margin: 20px;
     padding: 20px;
     padding-top: 5px;
