--- a/lib/sass/_transition.scss
+++ b/lib/sass/_transition.scss
@@ -15,3 +15,21 @@
     opacity: 0.01;
     transition: opacity 300ms ease-in;
 }
+
+.v-slide-enter {
+    transform: translateY(-100%);
+}
+
+.v-slide-enter.v-slide-enter-active {
+    transform: translateY(0%);
+    transition: all 300ms ease-in;
+}
+
+.v-slide-leave {
+    transform: translateY(0%);
+}
+
+.v-slide-leave.v-slide-leave-active {
+    transform: translateY(100%);
+    transition: all 300ms ease-in;
+}
