--- a/lib/sass/_transition.scss
+++ b/lib/sass/_transition.scss
@@ -1,22 +1,41 @@
 .fade-enter {
     opacity: 0.01;
-    max-height: 0px;
 }
 
 .fade-enter.fade-enter-active {
     opacity: 1;
-    max-height: 100px;
     transition: all 300ms ease-in;
 }
 
 .fade-leave {
-    max-height: 100px;
     opacity: 1;
 }
 
 .fade-leave.fade-leave-active {
     opacity: 0.01;
+    transition: all 300ms ease-in;
+}
+
+.pop-enter {
+    opacity: 0.01;
+    transform: scale(0);
     max-height: 0px;
+}
+
+.pop-enter.pop-enter-active {
+    opacity: 1;
+    transform: scale(1);
+    transition: all 300ms ease-in;
+}
+
+.pop-leave {
+    transform: scale(1);
+    opacity: 1;
+}
+
+.pop-leave.pop-leave-active {
+    opacity: 0.01;
+    transform: scale(0);
     transition: all 300ms ease-in;
 }
 
