fix facet header height

--- a/lib/sass/_Sidebar.scss
+++ b/lib/sass/_Sidebar.scss
@@ -49,6 +49,9 @@
         }
         .facet, .active_facet {
             .header {
+                .title, .more {
+                    height: 34px;
+                }
                 .title {
                     width: 85%;
                 }
