--- a/lib/sass/_transition.scss
+++ b/lib/sass/_transition.scss
@@ -4,7 +4,7 @@
 
 .fade-enter.fade-enter-active {
     opacity: 1;
-    transition: all 300ms ease-in;
+    @include single-transition(all, 300ms, ease-in);
 }
 
 .fade-leave {
@@ -13,7 +13,7 @@
 
 .fade-leave.fade-leave-active {
     opacity: 0.01;
-    transition: all 300ms ease-in;
+    @include single-transition(all, 300ms, ease-in);
 }
 
 .pop-enter {
@@ -24,7 +24,7 @@
 .pop-enter.pop-enter-active {
     opacity: 1;
     transform: scale(1);
-    transition: all 300ms ease-in;
+    @include single-transition(all, 300ms, ease-in);
 }
 
 .pop-leave {
@@ -35,7 +35,8 @@
 .pop-leave.pop-leave-active {
     opacity: 0.01;
     transform: scale(0);
-    transition: all 300ms ease-in;
+    @include single-transition(all, 300ms, ease-in);
+
 }
 
 .v-slide-enter {
@@ -44,7 +45,7 @@
 
 .v-slide-enter.v-slide-enter-active {
     transform: translateY(0%);
-    transition: all 300ms ease-in;
+    @include single-transition(all, 300ms, ease-in);
 }
 
 .v-slide-leave {
@@ -53,5 +54,5 @@
 
 .v-slide-leave.v-slide-leave-active {
     transform: translateY(100%);
-    transition: all 300ms ease-in;
+    @include single-transition(all, 300ms, ease-in);
 }
