--- a/lib/sass/_SearchResultWithSidebar.scss
+++ b/lib/sass/_SearchResultWithSidebar.scss
@@ -1,14 +1,13 @@
 .search-result-with-sidebar {
     position: relative;
-
-    border-top: solid 1px #ccc;
     .sidebar-handler {
         position: absolute;
+        background-color: white;
     }
     .sidebar {
         float: left;
         &.open {
-            width: 300px;
+            width: 290px;
         }
         &.closed {
             overflow: hidden;
@@ -22,6 +21,9 @@
             right: 0;
             margin-top: 15px;
         }
+        .search-count {
+            padding-left: 20px;
+        }
     }
     .search-result, .sidebar {
         transition: all 0.2s linear;
@@ -29,13 +31,11 @@
     &.no-sidebar {
         .search-result {
             margin-left: 30px;
-            border-left: solid 1px #ccc;
         }
     }
     &.with-sidebar {
         .search-result {
             margin-left: 330px;
-            border-left: solid 1px #ccc;
         }
     }
 }
