--- a/lib/sass/_Sidebar.scss
+++ b/lib/sass/_Sidebar.scss
@@ -3,6 +3,7 @@
 .sidebar {
     width: 300px;
     .limiters, .facet_list {
+        background-color: white;
         padding: 10px;
         h4 {
             font-size: 1.3em;
@@ -61,5 +62,10 @@
                 }
             }
         }
+    }
+    .limiters {
+        margin-bottom: 30px;
+        padding-top: 30px;
+
     }
 }
