add a checkbox to select the current page at once

--- a/lib/sass/_SearchResultWithSidebar.scss
+++ b/lib/sass/_SearchResultWithSidebar.scss
@@ -17,6 +17,11 @@
         }
     }
     .search-result {
+        .header {
+            input {
+                margin: 10px;
+            }
+        }
         .sort-selector {
             position: absolute;
             right: 0;
