--- a/lib/sass/_App.scss
+++ b/lib/sass/_App.scss
@@ -1,14 +1,17 @@
-.btn {
-    border-radius: 0px;
-}
 .ebsco-widget {
+    .btn {
+        border-radius: 0px;
+    }
+    hr {
+        margin: 5px;
+    }
     color: black;
     font-family: sans-serif;
     font-size: 14px;
     .container {
         max-width: 100%;
     }
-    .eds, .publication, .full-screen {
+    .full-screen {
         padding: 25px;
     }
     .full-screen {
