--- a/lib/sass/_Search.scss
+++ b/lib/sass/_Search.scss
@@ -21,6 +21,7 @@
         height: 36px;
     }
     .article-search-input-list {
+        margin-left: 0px;
         .open.dropdown.btn-group {
             z-index: 3;
         }
