--- a/lib/sass/style.scss
+++ b/lib/sass/style.scss
@@ -16,5 +16,6 @@
 @import "./_Error.scss";
 @import "./_ArticleLink.scss";
 @import "./_Eds.scss";
+@import "./_NavBar.scss";
 @import "./_SearchResultWithSidebar.scss";
 @import "./_transition.scss";
