--- a/lib/sass/style.scss
+++ b/lib/sass/style.scss
@@ -19,3 +19,4 @@
 @import "./_NavBar.scss";
 @import "./_SearchResultWithSidebar.scss";
 @import "./_transition.scss";
+@import "./_LabeledLinkList.scss";
