--- a/lib/sass/_App.scss
+++ b/lib/sass/_App.scss
@@ -1,7 +1,7 @@
 .ebsco-widget {
-    all: initial;
     font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
     .btn {
+        height: 34px;
         border-radius: 0px;
     }
     hr {
