better align searchResult header

--- a/lib/sass/_SearchResultWithSidebar.scss
+++ b/lib/sass/_SearchResultWithSidebar.scss
@@ -17,6 +17,9 @@
         }
     }
     .search-result {
+        .header{
+            margin-left: 40px;
+        }
         input {
             margin: 5px;
         }
