--- a/lib/sass/_Record.scss
+++ b/lib/sass/_Record.scss
@@ -2,6 +2,10 @@
 @import "./variables.scss";
 
 .record {
+    margin: 0px 20px 20px;
+    padding: 20px;
+    padding-top: 5px;
+    background-color: $back;
     text-align: left;
     .title {
         .fa {
@@ -38,8 +42,4 @@
             padding: 5px 0 5px 10px;
         }
     }
-    margin: 20px;
-    padding: 20px;
-    padding-top: 5px;
-    background-color: $back;
 }
