--- a/lib/sass/_SearchResultWithSidebar.scss
+++ b/lib/sass/_SearchResultWithSidebar.scss
@@ -17,9 +17,10 @@
         }
     }
     .search-result {
+        position: absolute;
         .header{
             margin: 5px;
-            margin-left: 40px;
+            margin-left: 30px;
         }
     }
     .search-result, .sidebar {
