fix result overflow

--- a/lib/sass/_SearchResultWithSidebar.scss
+++ b/lib/sass/_SearchResultWithSidebar.scss
@@ -17,8 +17,8 @@
         }
     }
     .search-result {
-        position: absolute;
         .header{
+            height: 34px;
             margin: 5px;
             margin-left: 30px;
         }
