--- a/lib/sass/_Search.scss
+++ b/lib/sass/_Search.scss
@@ -52,13 +52,12 @@
                 justify-content: flex-end;
             }
         }
-    }
-    .search-menu {
-        display: flex;
-        flex: 1;
-        justify-content: space-between;
-        .show-result {
-            align-self: flex-end;
+        .search-menu {
+            display: flex;
+            justify-content: space-between;
+            justify-content: flex-end;
+            .show-result {
+            }
         }
     }
 }
