--- a/lib/sass/_DL.scss
+++ b/lib/sass/_DL.scss
@@ -2,31 +2,44 @@
 @import "compass/typography/lists/inline-list";
 
 .dl {
-    dt {
-        float: left;
-        text-align: right;
-        font-weight: bold;
-        padding-right: 5px;
-    }
-    dt::after {
-        content: ":"
-    }
-    .fulltext-holdings {
-        list-style-type: none;
-        padding: 0;
-    }
-    dd {
-        display: block;
-    }
-    .dl {
-        @include inline-block();
-        margin-top: 1em;
+    display: flex;
+    flex-direction: column;
+    .dl-item {
+        display: flex;
+        margin-bottom: 5px;
         dt {
-            text-align: left;
+            padding-right: 10px;
+            flex: 1;
+            text-align: right;
+        }
+        dt::after {
+            content: ":"
+        }
+        .fulltext-holdings {
+            list-style-type: none;
             padding: 0;
         }
         dd {
-            padding: 0;
+            flex: 9;
+            display: block;
+            .ul {
+                display: flex;
+                flex-wrap: wrap;
+                .ul {
+                    display: block;
+                }
+            }
+        }
+        .dl {
+            @include inline-block();
+            margin-top: 1em;
+            dt {
+                text-align: left;
+                padding: 0;
+            }
+            dd {
+                padding: 0;
+            }
         }
     }
 }
