fetch and display exactMacth notice

--- a/lib/sass/style.scss
+++ b/lib/sass/style.scss
@@ -21,3 +21,4 @@
 @import "./_transition.scss";
 @import "./_LabeledLinkList.scss";
 @import "./_Authentication.scss";
+@import "./_ExactMatchPlacard.scss";
