style chevron to the right

--- a/lib/sass/_ExactMatchPlacard.scss
+++ b/lib/sass/_ExactMatchPlacard.scss
@@ -1,7 +1,15 @@
+@import "./variables.scss";
+
 .exact-match {
     margin: 20px;
     padding: 10px;
     border: solid #BBBBBB 1px;
+    .title {
+        .btn-link {
+            float: right;
+        }
+        color: $title;
+    }
     .fetch-link {
         cursor: pointer;
         text-decoration: none;
