display article link as a single line

--- a/lib/sass/_Record.scss
+++ b/lib/sass/_Record.scss
@@ -34,6 +34,14 @@
         list-style-type: none;
     }
 
+    ul {
+        list-style-type: none;
+        padding-left: 0;
+        li {
+            margin-bottom: 5px;
+        }
+    }
+
     .notice {
         font-size: 13px;
         line-height: 1em;
