--- a/lib/sass/_Search.scss
+++ b/lib/sass/_Search.scss
@@ -21,9 +21,15 @@
         }
         .search-input {
             .term {
+                position: relative;
                 display: flex;
                 flex-direction: column;
                 .autocompletion {
+                    position: absolute;
+                    left: 0;
+                    right: 0;
+                    top: 34px;
+                    z-index: 10;
                     display: flex;
                     flex-direction: column;
                     border: 1px solid #ccc;
